--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -12,9 +12,9 @@
             <div class="card-body">
                 <form>
                     <label>Título</label>
-                    <input type="text" placeholder="titulo" class="form-control">
+                    <input type="text" placeholder="titulo" class="form-control" name="titulo">
                     <br><label>Descrição</label>
-                    <textarea placeholder ="Descreva sua pergunta" class="form-control"></textarea>
+                    <textarea placeholder ="Descreva sua pergunta" class="form-control" name="descricao"></textarea>
                     <br>
                     <button class="btn btn-success">Perguntar</button>
                 </form>
