--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -10,7 +10,7 @@
                 <h3>Realizar pergunta</h3> 
             </div>
             <div class="card-body">
-                <form>
+                <form method="POST" action="/salvarpergunta">
                     <label>Título</label>
                     <input type="text" placeholder="titulo" class="form-control" name="titulo">
                     <br><label>Descrição</label>
